--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vueuse/core": "^10.9.0",
     "pinia": "^2.1.7",
     "vue": "^3.4.19",
+    "vue-i18n": "^9.10.1",
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
