--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,6 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src/**.ts", "src/**.vue"],
+  "include": ["src/**.ts", "src/**.vue", "back/__shims.d.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
